--- a/LayeredArchitecture/Views/_ViewImports.cshtml
+++ b/LayeredArchitecture/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LayeredArchitecture
 @using LayeredArchitecture.Models
+@using LayeredArchitecture.Data.Entities;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
